--- a/insider/assets/src/scss/subtemplates/_header.scss
+++ b/insider/assets/src/scss/subtemplates/_header.scss
@@ -1,24 +1,101 @@
 header {
   grid-area: 1 / 1 / 2 / 2;
-  display: flex;
-  justify-content: center;
-  padding: 16px 24px;
-  
-  @media  (max-width: 880px) {
+
+  @media (max-width: 880px) {
     width: 100%;
-    justify-content: space-between;
+    position: sticky;
+    top: 0;
+    z-index: 2;
+    background: $branco;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   }
 
-  .visibility-hidden {
-    display: none;
+  .header-main {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 16px 24px;
+
+    @media (max-width: 880px) {
+      justify-content: space-between;
+
+    }
+
+    .logo {
+      position: relative;
+      overflow: hidden;
+
+      @keyframes toright {
+        0% {
+          left: -170px;
+        }
+
+        100% {
+          left: 170px;
+        }
+      }
+
+      .reflexo {
+        background: transparent;
+        background: linear-gradient(180deg, transparent 0%, rgba(255, 255, 255, 0.5) 50%, transparent 100%);
+        width: 100%;
+        height: 50px;
+        position: absolute;
+        left: -170px;
+        transform: rotateZ(45deg);
+        -webkit-transform: rotateZ(45deg);
+        -moz-transform: rotateZ(45deg);
+        -o-transform: rotateZ(45deg);
+        -ms-transform: rotateZ(45deg);
+        transition: all 0.8s ease;
+        -webkit-transition: all 0.8s ease;
+        -moz-transition: all 0.8s ease;
+        -o-transition: all 0.8s ease;
+        -ms-transition: all 0.8s ease;
+        animation: toright 5s ease-in-out 8s infinite normal none;
+      }
+    }
+
+    .open-cart {
+      display: none;
+      width: 32px;
+      position: relative;
+
+      .js-cart-bubble {
+        position: absolute;
+        width: 14px;
+        height: 14px;
+        border-radius: 50%;
+        background: #000;
+        color: #fff;
+        font-size: 12px;
+        font-family: $fonte-2;
+        right: 0;
+        top: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      @media (max-width: 880px) {
+        display: block;
+      }
+    }
   }
 
-  .js-open-cart {
-    display: none;
-    width: 32px;
+  .announcement-bar {
+    width: 100%;
+    background: #000;
+    padding: 8px 0;
 
-    @media  (max-width: 880px) {
-      display: block;
+    p {
+      font-size: 12px;
+      font-weight: 700;
+      letter-spacing: 1.6px;
+      font-family: $fonte-1;
+      text-transform: uppercase;
+      color: $branco;
+      text-align: center;
     }
   }
 }
