--- a/insider/assets/src/scss/templates/_checkout.scss
+++ b/insider/assets/src/scss/templates/_checkout.scss
@@ -1,29 +1,3 @@
-$font-1: 'manrope', sans-serif;
-$font-2: 'formular', 'manrope', sans-serif;
-
-.btn {
-  font-family: $font-2;
-  background-color: #000;
-  border: 0;
-  color: #fff;
-  border-radius: 4px;
-  width: 100%;
-  height: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-transform: uppercase;
-  font-weight: 600;
-  letter-spacing: 1px;
-  line-height: 1;
-  transition: all .25s ease-in-out;
-  cursor: pointer;
-
-  &:hover {
-    background-color: #A20016;
-  }
-}
-
 html {
   scroll-behavior: smooth;
 }
@@ -34,40 +8,25 @@ body {
   grid-template-rows: 68px 1fr 68px;
   grid-column-gap: 0px;
   grid-row-gap: 0px;
-  font-family: $font-1;
+  font-family: $fonte-1;
   overflow-y: scroll;
 
-  @media  (max-width: 880px) {
+  &.no-scroll {
+    position: fixed;
+  }
+
+  @media (max-width: 880px) {
     display: flex;
     flex-wrap: wrap;
   }
 
-  cart-side.cart {
+  .cart {
     grid-area: 1 / 2 / 4 / 3;
     background-color: #fafafa;
     border-left: 1px solid #ddd;
     height: 100%;
     box-sizing: border-box;
     position: relative;
-      
-    &.cart-opened {
-      right: 0;
-    }
-
-    .js-cart-close {
-      display: none;
-      position: absolute;
-      right: 16px;
-      top: 16px;
-      font-size: 20px;
-      background: none;
-      border: 1px solid #000;
-      padding: 5px 10px 4px;
-      font-family: $font-2;
-      line-height: 1;
-      cursor: pointer;
-      z-index: 1;
-    }
 
     @media (max-width: 880px) {
       width: 100%;
@@ -75,22 +34,30 @@ body {
       right: -100%;
       top: 0;
       transition: all .25s ease-in-out;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      z-index: 9;
 
       .js-cart-close {
         display: block;
       }
     }
 
-    h2 {
-      width: 100%;
-      display: block;
+    &.cart-opened {
+      right: 0;
+    }
+
+    .cart-close {
+      position: absolute;
+      right: 24px;
+      top: 16px;
       font-size: 20px;
-      font-weight: bold;
-      text-transform: uppercase;
-      font-family: $font-2;
-      letter-spacing: 1px;
-      margin-bottom: 24px;
-      text-align: center;
+      background: none;
+      border: 1px solid $preto;
+      padding: 5px 10px 4px;
+      font-family: $fonte-2;
+      line-height: 1;
+      cursor: pointer;
+      z-index: 1;
     }
 
     .cart-content {
@@ -102,9 +69,24 @@ body {
       flex-direction: column;
       justify-content: space-between;
 
-      #cart-empty {
-        height: calc(100% - 120px);
+      @media (max-width: 480px) {
+        padding: 16px;
+        padding-bottom: 60px;
+      }
+
+      &__empty {
+        height: calc(100vh - 120px);
         text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+
+        p {
+          display: block;
+          margin-top: 12px;
+          line-height: 1.3;
+        }
       }
 
       h2 {
@@ -125,6 +107,35 @@ body {
           border-bottom: 1px solid #ddd;
           padding: 0 0 24px;
 
+          @media (max-width: 480px) {
+            padding-bottom: 16px;
+            margin-bottom: 16px;
+          }
+
+          &[data-sku='brinde'] {
+
+            .cart-item__infos__quantity,
+            .cart-item__infos__price,
+            .cart-item__rmv-all {
+              display: none;
+            }
+
+            .cart-item__infos__brinde {
+              order: 2;
+              display: block;
+              text-transform: uppercase;
+              display: inline-block !important;
+              background: $cor-1;
+              color: $branco;
+              font-weight: 800;
+              line-height: 1;
+              font-size: 12px;
+              letter-spacing: 0.6px;
+              padding: 5px 10px 3px 10px;
+              border-radius: 4px;
+              height: max-content;
+            }
+          }
 
           &__rmv-all {
             position: absolute;
@@ -138,7 +149,7 @@ body {
             font-weight: 400;
             text-transform: uppercase;
             text-decoration: underline;
-            color: #000;
+            color: $preto;
           }
 
           &__picture {
@@ -149,6 +160,12 @@ body {
             justify-content: center;
             align-items: center;
             overflow: hidden;
+            background: #eee;
+
+            @media (max-width: 480px) {
+              width: 50px;
+              height: 50px;
+            }
 
             img {
               width: auto;
@@ -163,18 +180,30 @@ body {
             flex-wrap: wrap;
             justify-content: space-between;
             align-items: space-between;
+            
+            @media (max-width: 480px) {
+              width: calc(100% - 66px);
+            }
 
             &__name {
               font-weight: bold;
               order: 1;
               width: 100%;
               height: 50%;
+              
+              @media (max-width: 480px) {
+              font-size: 14px;
+              }
             }
 
             &__price {
               order: 3;
               width: calc(100% - 114px);
               text-align: right;
+
+              @media (max-width: 480px) {
+                font-size: 12px;
+              }
             }
 
             &__quantity {
@@ -205,10 +234,10 @@ body {
                 }
 
                 &:hover {
-                  background: #000;
+                  background: $preto;
 
                   path {
-                    stroke: #fff;
+                    stroke: $branco;
                     fill: white;
                   }
                 }
@@ -223,13 +252,17 @@ body {
           }
         }
       }
+      
+      &__list-items::-webkit-scrollbar {
+        position: relative;
+        right: -10px;
+      }
 
-      .cart-footer {
+      .cart-content__footer {
         height: 100px;
+        padding-top: 24px;
 
-
-        .cart-footer__total {
-    
+        &__total {
           text-align: right;
           margin-bottom: 24px;
           font-weight: bold;
@@ -240,15 +273,15 @@ body {
     }
   }
 
-  main.content {
+  .content {
     grid-area: 2 / 1 / 3 / 2;
     padding: 62px;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     position: relative;
-    
-    @media  (max-width: 880px) {
+
+    @media (max-width: 880px) {
       width: 100%;
       padding: 24px;
     }
@@ -259,7 +292,7 @@ body {
       font-size: 20px;
       font-weight: bold;
       text-transform: uppercase;
-      font-family: $font-2;
+      font-family: $fonte-2;
       letter-spacing: 1px;
       margin-bottom: 24px;
       text-align: center;
@@ -288,7 +321,7 @@ body {
         height: 48px;
         border-radius: 50%;
         display: inline-block;
-        border-top: 4px solid #000;
+        border-top: 4px solid $preto;
         border-right: 4px solid transparent;
         box-sizing: border-box;
         animation: rotation 1s linear infinite;
@@ -327,9 +360,8 @@ body {
       @media (max-width: 1280px) {
         max-width: inherit;
       }
-      
-    @media  (max-width: 880px) {
-    }
+
+      @media (max-width: 880px) {}
 
       &__product-module {
         box-sizing: border-box;
@@ -354,16 +386,16 @@ body {
             right: 8px;
             top: 8;
             background: transparent;
-            color: #A20016;
+            color: $cor-2;
             border-radius: 4px;
-            border: 1px solid #A20016;
+            border: 1px solid $cor-2;
             padding: 5px 10px 3px 10px;
-            font-size: 7px;
-            font-weight: 700;
+            font-size: 9px;
+            font-weight: 500;
             text-transform: uppercase;
             line-height: 1;
             z-index: 1;
-            font-family: $font-2;
+            font-family: $fonte-2;
           }
 
           &:hover {
@@ -378,14 +410,14 @@ body {
           color: #3d3d3d;
           letter-spacing: 0.6px;
           font-weight: bold;
-          font-family: $font-2;
+          font-family: $fonte-2;
         }
 
         &__price {
           margin: 12px 0;
           font-size: 14px;
           color: #3d3d3d;
-          font-family: $font-2;
+          font-family: $fonte-2;
           text-decoration: none;
           font-weight: 400;
         }
@@ -397,7 +429,6 @@ body {
   }
 }
 
-/* Chrome, Edge and Safari */
 *::-webkit-scrollbar {
   height: 6px;
   width: 6px;
@@ -423,44 +454,4 @@ body {
 
 *::-webkit-scrollbar-thumb:hover {
   background-color: #4a4a4a;
-}
-
-// *::-webkit-scrollbar-thumb:active {
-//   background-color: #62A34B;
-// }
-
-.modal-alert {
-  z-index: 1;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(255, 255, 255, 0.3);
-  display: none;
-  justify-content: center;
-  align-items: center;
-
-  &__content {
-    width: 480px;
-    height: auto;
-    padding: 48px;
-    background: #fff;
-    text-align: center;
-
-    h2 {
-      font-family: $font-1;
-      font-weight: bold;
-      text-transform: uppercase;
-      font-size: 24px;
-    }
-
-    p {
-      margin: 12px 0;
-    }
-
-    button {
-      margin-top: 12px;
-    }
-  }
 }
