--- a/insider/assets/src/scss/templates/_checkout.scss
+++ b/insider/assets/src/scss/templates/_checkout.scss
@@ -36,10 +36,6 @@ body {
       transition: all .25s ease-in-out;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
       z-index: 9;
-
-      .js-cart-close {
-        display: block;
-      }
     }
 
     &.cart-opened {
@@ -58,6 +54,16 @@ body {
       line-height: 1;
       cursor: pointer;
       z-index: 1;
+      display: none;
+      
+      @media (max-width: 480px) {
+        display: block !important;
+      }
+
+      @media (max-width: 480px) {
+        right: 16px;
+        top: 8px;
+      }
     }
 
     .cart-content {
@@ -113,7 +119,6 @@ body {
           }
 
           &[data-sku='brinde'] {
-
             .cart-item__infos__quantity,
             .cart-item__infos__price,
             .cart-item__rmv-all {
@@ -142,6 +147,8 @@ body {
             top: 0;
             right: 0;
             border: 0;
+            margin: 0;
+            padding: 0;
             background: none;
             cursor: pointer;
             font-size: 10px;
@@ -190,6 +197,7 @@ body {
               order: 1;
               width: 100%;
               height: 50%;
+              padding-left: 50px;
               
               @media (max-width: 480px) {
               font-size: 14px;
@@ -284,6 +292,7 @@ body {
     @media (max-width: 880px) {
       width: 100%;
       padding: 24px;
+      min-height: 80vh;
     }
 
     h2 {
