--- a/insider/assets/src/scss/templates/_checkout.scss
+++ b/insider/assets/src/scss/templates/_checkout.scss
@@ -197,7 +197,7 @@ body {
               order: 1;
               width: 100%;
               height: 50%;
-              padding-left: 50px;
+              padding-right: 50px;
               
               @media (max-width: 480px) {
               font-size: 14px;
