--- a/insider/assets/src/scss/helpers/_variables.scss
+++ b/insider/assets/src/scss/helpers/_variables.scss
@@ -17,8 +17,8 @@ $cor-2: #A20016;
 $cor-3: #101828;
 $cor-4: #E1ECFF;
 $cor-5: #6941C6;
-$cor-6: #efefef;
-$cor-7: #F9FAFB;
+$cor-6: #ddd;
+$cor-7: #f9fafb;
 $cor-8: #373ED0;
 $cor-texto-1: #545454;
 
