--- a/insider/assets/src/scss/components/_modals.scss
+++ b/insider/assets/src/scss/components/_modals.scss
@@ -5,8 +5,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(255, 255, 255, 0.3);
-  display: none;
+  background: rgba(0, 0, 0, 0.8);
+  display: flex;
   justify-content: center;
   align-items: center;
 
@@ -17,11 +17,16 @@
     background: $branco;
     text-align: center;
 
+    svg {
+      margin-bottom: 12px;
+    }
+
     h2 {
       font-family: $fonte-1;
       font-weight: bold;
       text-transform: uppercase;
       font-size: 24px;
+      margin-bottom: 12px;
     }
 
     p {
