--- a/insider/assets/src/scss/templates/_checkout.scss
+++ b/insider/assets/src/scss/templates/_checkout.scss
@@ -15,6 +15,10 @@ body {
     position: fixed;
   }
 
+  @media (max-width: 1440px) {
+    grid-template-columns: 1fr 360px;
+  }
+
   @media (max-width: 880px) {
     display: flex;
     flex-wrap: wrap;
@@ -22,8 +26,8 @@ body {
 
   .cart {
     grid-area: 1 / 2 / 4 / 3;
-    background-color: #fafafa;
-    border-left: 1px solid #ddd;
+    background-color: $cor-7;
+    border-left: 1px solid $cor-6;
     height: 100%;
     box-sizing: border-box;
     position: relative;
@@ -33,8 +37,8 @@ body {
       position: fixed;
       right: -100%;
       top: 0;
-      transition: all .25s ease-in-out;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      transition: all 0.25s ease-in-out;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       z-index: 9;
     }
 
@@ -55,8 +59,8 @@ body {
       cursor: pointer;
       z-index: 1;
       display: none;
-      
-      @media (max-width: 480px) {
+
+      @media (max-width: 880px) {
         display: block !important;
       }
 
@@ -80,8 +84,14 @@ body {
         padding-bottom: 60px;
       }
 
+      h2 {
+        text-align: left;
+        font-size: 16px;
+        height: 20px;
+      }
+
       &__empty {
-        height: calc(100vh - 120px);
+        height: calc(100vh - 124px);
         text-align: center;
         display: flex;
         justify-content: center;
@@ -95,14 +105,8 @@ body {
         }
       }
 
-      h2 {
-        text-align: left;
-        font-size: 16px;
-        height: 20px;
-      }
-
       &__list-items {
-        height: calc(100% - 120px);
+        height: calc(100% - 124px);
         overflow-y: auto;
 
         .cart-item {
@@ -110,7 +114,7 @@ body {
           display: flex;
           justify-content: space-between;
           margin-bottom: 24px;
-          border-bottom: 1px solid #ddd;
+          border-bottom: 1px solid $cor-6;
           padding: 0 0 24px;
 
           @media (max-width: 480px) {
@@ -118,7 +122,7 @@ body {
             margin-bottom: 16px;
           }
 
-          &[data-sku='brinde'] {
+          &[data-sku="brinde"] {
             .cart-item__infos__quantity,
             .cart-item__infos__price,
             .cart-item__rmv-all {
@@ -187,7 +191,7 @@ body {
             flex-wrap: wrap;
             justify-content: space-between;
             align-items: space-between;
-            
+
             @media (max-width: 480px) {
               width: calc(100% - 66px);
             }
@@ -198,9 +202,13 @@ body {
               width: 100%;
               height: 50%;
               padding-right: 50px;
-              
+              display: -webkit-box;
+              -webkit-line-clamp: 2;
+              -webkit-box-orient: vertical;  
+              overflow: hidden;
+
               @media (max-width: 480px) {
-              font-size: 14px;
+                font-size: 14px;
               }
             }
 
@@ -216,7 +224,7 @@ body {
 
             &__quantity {
               width: 90px;
-              border: 1px solid #ddd;
+              border: 1px solid $cor-05;
               height: 30px;
               order: 2;
               display: inline-flex;
@@ -230,7 +238,7 @@ body {
                 font-weight: bold;
                 font-size: 16px;
                 cursor: pointer;
-                transition: all .25s ease-in-out;
+                transition: all 0.25s ease-in-out;
                 display: flex;
                 align-items: center;
                 justify-content: center;
@@ -260,23 +268,51 @@ body {
           }
         }
       }
-      
+
       &__list-items::-webkit-scrollbar {
         position: relative;
         right: -10px;
       }
 
-      .cart-content__footer {
-        height: 100px;
+      &__footer {
+        height: 124px;
         padding-top: 24px;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+
+        &__shipping {
+          width: 100%;
+          text-align: right;
+          margin-bottom: 24px;
+          display: flex;
+          justify-content: space-between;
+          text-transform: uppercase;
+          font-family: $fonte-2;
+          font-size: 13px;
+          margin: 5px 0;
+        }
+
+        &__description {
+          text-transform: uppercase;
+          font-family: $fonte-2;
+          font-size: 13px;
+          width: 50%;
+          margin: 8px 0;
+        }
 
         &__total {
+          width: 50%;
           text-align: right;
           margin-bottom: 24px;
           font-weight: bold;
+          font-family: $fonte-2;
+          font-size: 20px;
+          margin: 8px 0;
         }
 
-        button {}
+        button {
+        }
       }
     }
   }
@@ -288,6 +324,10 @@ body {
     justify-content: center;
     flex-wrap: wrap;
     position: relative;
+
+    @media (max-width: 1440px) {
+      padding: 62px 24px;
+    }
 
     @media (max-width: 880px) {
       width: 100%;
@@ -337,7 +377,7 @@ body {
       }
 
       .loader::after {
-        content: '';
+        content: "";
         box-sizing: border-box;
         position: absolute;
         left: 0;
@@ -345,7 +385,7 @@ body {
         width: 48px;
         height: 48px;
         border-radius: 50%;
-        border-bottom: 4px solid #FF3D00;
+        border-bottom: 4px solid $cor-2;
         border-left: 4px solid transparent;
       }
 
@@ -366,11 +406,13 @@ body {
       gap: 24px;
       max-width: 1000px;
 
-      @media (max-width: 1280px) {
-        max-width: inherit;
+      @media (max-width: 1440px) {
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
       }
 
-      @media (max-width: 880px) {}
+      @media (max-width: 1280px) {
+        max-width: 100%;
+      }
 
       &__product-module {
         box-sizing: border-box;
@@ -387,7 +429,7 @@ body {
             width: auto;
             max-width: 100%;
             height: auto;
-            transition: all .25s ease;
+            transition: all 0.25s ease;
           }
 
           .tag {
@@ -420,19 +462,22 @@ body {
           letter-spacing: 0.6px;
           font-weight: bold;
           font-family: $fonte-2;
+          padding: 0 12px;
+          display: -webkit-box;
+          -webkit-line-clamp: 1;
+          -webkit-box-orient: vertical;  
+          overflow: hidden;
         }
 
         &__price {
           margin: 12px 0;
-          font-size: 14px;
+          font-size: 16px;
           color: #3d3d3d;
           font-family: $fonte-2;
           text-decoration: none;
           font-weight: 400;
+          padding: 0 12px;
         }
-
-        &__button {}
-
       }
     }
   }
@@ -445,15 +490,15 @@ body {
 
 *::-webkit-scrollbar-track {
   border-radius: 5px;
-  background-color: #DFE9EB;
+  background-color: #dfe9eb;
 }
 
 *::-webkit-scrollbar-track:hover {
-  background-color: #B8C0C2;
+  background-color: #b8c0c2;
 }
 
 *::-webkit-scrollbar-track:active {
-  background-color: #B8C0C2;
+  background-color: #b8c0c2;
 }
 
 *::-webkit-scrollbar-thumb {
