--- a/insider/assets/src/scss/templates/_checkout.scss
+++ b/insider/assets/src/scss/templates/_checkout.scss
@@ -98,10 +98,15 @@ body {
         align-items: center;
         flex-direction: column;
 
-        p {
+        h2 {
           display: block;
           margin-top: 12px;
           line-height: 1.3;
+          font-family: $fonte-1;
+          font-weight: 700;
+          letter-spacing: 0.6px;
+          text-transform: uppercase;
+          text-align: center;
         }
       }
 
