--- a/insider/assets/src/scss/components/_modals.scss
+++ b/insider/assets/src/scss/components/_modals.scss
@@ -1,5 +1,5 @@
 .modal-alert {
-  z-index: 1;
+  z-index: 99;
   position: fixed;
   top: 0;
   left: 0;
@@ -16,21 +16,28 @@
     padding: 48px;
     background: $branco;
     text-align: center;
+    max-width: 90%;
+    
+    @media (max-width: 480px) {
+      padding: 24px;
+    }
 
-    svg {
+    svg,
+    img {
       margin-bottom: 12px;
     }
 
     h2 {
-      font-family: $fonte-1;
-      font-weight: bold;
+      font-family: $fonte-2;
+      font-weight: 800;
       text-transform: uppercase;
+      letter-spacing: normal;
       font-size: 24px;
       margin-bottom: 12px;
     }
 
     p {
-      margin: 12px 0;
+      margin: 12px 0 24px;
     }
 
     button {
