--- a/insider/assets/src/scss/templates/_checkout.scss
+++ b/insider/assets/src/scss/templates/_checkout.scss
@@ -513,7 +513,7 @@ body {
             }
           }
         }
-        &[data-available='false'] {
+        &[disabled] {
           .btn {
             background-color: $cor-05;
             color: $preto;
