--- a/assets/src/scss/style.scss
+++ b/assets/src/scss/style.scss
@@ -16,7 +16,7 @@
 @import "components/buttons";
 @import "components/modals";
 @import "components/tags";
-@import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap");
+// @import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap");
 @import "subtemplates/footer";
 @import "subtemplates/header";
 @import "templates/home";
