--- a/assets/src/scss/templates/_home.scss
+++ b/assets/src/scss/templates/_home.scss
@@ -3,17 +3,27 @@
   background: $preto;
 
   .section-intro {
-    background-image: url("../img/background-section.png");
-    background-position: center;
-    background-size: cover;
     height: 100vh;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
+    overflow: hidden;
 
-    &::after {
+    .background-section {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: auto;
+      height: auto;
+      min-width: 100%;
+      min-height: 100%;
+      z-index: 1;
+      transform: translate(-50%, -50%);
+    }
+
+    .overlay {
       content: "";
       position: absolute;
       top: 0;
@@ -21,10 +31,11 @@
       width: 100%;
       height: 100%;
       background-color: rgba(0, 0, 0, 0.7);
+      z-index: 2;
     }
 
     .layout {
-      z-index: 2;
+      z-index: 3;
       display: flex;
       justify-content: space-between;
       gap: 100px;
