--- a/assets/fonts/fredoka/fredoka.css
+++ b/assets/fonts/fredoka/fredoka.css
@@ -5,7 +5,7 @@
   font-weight: 300;
   font-stretch: 100%;
   font-display: swap;
-  src: url('fonts/fredoka-1.woff2') format('woff2');
+  src: url('fredoka-1.woff2') format('woff2');
   unicode-range: U+0590-05FF, U+200C-2010, U+20AA, U+25CC, U+FB1D-FB4F;
 }
 /* latin-ext */
@@ -15,7 +15,7 @@
   font-weight: 300;
   font-stretch: 100%;
   font-display: swap;
-  src: url('fonts/fredoka-2.woff2') format('woff2');
+  src: url('fredoka-2.woff2') format('woff2');
   unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -25,7 +25,7 @@
   font-weight: 300;
   font-stretch: 100%;
   font-display: swap;
-  src: url('fonts/fredoka-3.woff2') format('woff2');
+  src: url('fredoka-3.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* hebrew */
@@ -35,7 +35,7 @@
   font-weight: 400;
   font-stretch: 100%;
   font-display: swap;
-  src: url('fonts/fredoka-1.woff2') format('woff2');
+  src: url('fredoka-1.woff2') format('woff2');
   unicode-range: U+0590-05FF, U+200C-2010, U+20AA, U+25CC, U+FB1D-FB4F;
 }
 /* latin-ext */
@@ -45,7 +45,7 @@
   font-weight: 400;
   font-stretch: 100%;
   font-display: swap;
-  src: url('fonts/fredoka-2.woff2') format('woff2');
+  src: url('fredoka-2.woff2') format('woff2');
   unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -55,7 +55,7 @@
   font-weight: 400;
   font-stretch: 100%;
   font-display: swap;
-  src: url('fonts/fredoka-3.woff2') format('woff2');
+  src: url('fredoka-3.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* hebrew */
@@ -65,7 +65,7 @@
   font-weight: 500;
   font-stretch: 100%;
   font-display: swap;
-  src: url('fonts/fredoka-1.woff2') format('woff2');
+  src: url('fredoka-1.woff2') format('woff2');
   unicode-range: U+0590-05FF, U+200C-2010, U+20AA, U+25CC, U+FB1D-FB4F;
 }
 /* latin-ext */
@@ -75,7 +75,7 @@
   font-weight: 500;
   font-stretch: 100%;
   font-display: swap;
-  src: url('fonts/fredoka-2.woff2') format('woff2');
+  src: url('fredoka-2.woff2') format('woff2');
   unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -85,7 +85,7 @@
   font-weight: 500;
   font-stretch: 100%;
   font-display: swap;
-  src: url('fonts/fredoka-3.woff2') format('woff2');
+  src: url('fredoka-3.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* hebrew */
@@ -95,7 +95,7 @@
   font-weight: 600;
   font-stretch: 100%;
   font-display: swap;
-  src: url('fonts/fredoka-1.woff2') format('woff2');
+  src: url('fredoka-1.woff2') format('woff2');
   unicode-range: U+0590-05FF, U+200C-2010, U+20AA, U+25CC, U+FB1D-FB4F;
 }
 /* latin-ext */
@@ -105,7 +105,7 @@
   font-weight: 600;
   font-stretch: 100%;
   font-display: swap;
-  src: url('fonts/fredoka-2.woff2') format('woff2');
+  src: url('fredoka-2.woff2') format('woff2');
   unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -115,7 +115,7 @@
   font-weight: 600;
   font-stretch: 100%;
   font-display: swap;
-  src: url('fonts/fredoka-3.woff2') format('woff2');
+  src: url('fredoka-3.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* hebrew */
@@ -125,7 +125,7 @@
   font-weight: 700;
   font-stretch: 100%;
   font-display: swap;
-  src: url('fonts/fredoka-1.woff2') format('woff2');
+  src: url('fredoka-1.woff2') format('woff2');
   unicode-range: U+0590-05FF, U+200C-2010, U+20AA, U+25CC, U+FB1D-FB4F;
 }
 /* latin-ext */
@@ -135,7 +135,7 @@
   font-weight: 700;
   font-stretch: 100%;
   font-display: swap;
-  src: url('fonts/fredoka-2.woff2') format('woff2');
+  src: url('fredoka-2.woff2') format('woff2');
   unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -145,6 +145,6 @@
   font-weight: 700;
   font-stretch: 100%;
   font-display: swap;
-  src: url('fonts/fredoka-3.woff2') format('woff2');
+  src: url('fredoka-3.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
